<resources>
    <string name="app_name">T1Mart</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Trang chủ</string>
    <string name="mall">Danh mục</string>
    <string name="information">Tài khoản</string>
    <string name="hint_editText">Tìm thông tin sản phẩm</string>
    <string name="recyclerviewc_content">XảkhoNGON</string>
    <string name="rv2_textview_content">Rẻ mỗi ngày</string>
    <string name="rv2_textview_title">Bộ Sưu tập nổi bật</string>
    <string name="rv2_textview_title_2">Thương hiệu chính hãng</string>
    <string name="rv4_textview_categories">Mua sắm theo danh mục</string>
    <string name="rv4_textview_categories_2">Xem thêm</string>
    <string name="text">ABC123</string>
    <string name="productInformation">Thông tin sản phẩm</string>
    <string name="contentCategory">Danh mục hàng hóa</string>
    <string name="rvListProduct_text">Danh mục các sản phẩm</string>
    <string name="productDetail">Thông tin thêm:</string>
    <string name="review">đánh giá</string>
    <string name="rating">xếp hạng</string>
    <string name="personalRating">5</string>
    <string name="dauGach">/</string>
    <string name="sale">Giảm đến: </string>
    <string name="percent">%</string>

    <!--    splash screen-->
    <string name="text_1">T</string>
    <string name="text_2">1</string>
    <string name="text_3">MART</string>
    <string name="version">v2.0</string>

    <!--    buttom-->
    <string name="addtocart">Thêm vào giỏ</string>
    <string name="buynow">Mua ngay</string>
    <string name="relatedProducts">Các sản phẩm liên quan</string>
    <string name="seemore">Xem thêm</string>

    <!--    sign in/ sign up-->
    <string name="title_signin">Đăng nhập</string>
    <string name="title_signup">Đăng ký</string>
    <string name="title_havenoacc">Chưa có tài khoản?</string>
    <string name="title_haveacc">Đã có tài khoản?</string>
    <string name="signin">Đăng nhập ngay</string>
    <string name="signup">Đăng ký ngay</string>
    <string name="another_signin">Hoặc đăng nhập bằng</string>
    <string name="another_signup">Hoặc đăng ký bằng</string>
    <string name="edt_phone_signin">Nhập số điện thoại</string>
    <string name="edt_name">Nhập tên (Bắt buộc)</string>
    <string name="edt_phone">Nhập số điện thoại (Bắt buộc)</string>
    <string name="edt_address">Nhập địa chỉ nhận hàng</string>
</resources>