<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/padmar_20"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/layout_100"
            android:layout_height="@dimen/layout_100"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padmar_20"
            android:gravity="center"
            android:text="@string/title_signin"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/size_25"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padmar_20"
            android:background="@drawable/signin_signup_edt_custom"
            android:drawableStart="@drawable/ic_phone_custom"
            android:drawablePadding="10dp"
            android:hint="@string/edt_phone_signin"
            android:inputType="number"
            android:padding="@dimen/padmar_15"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18" />

        <TextView
            android:id="@+id/tvWarningSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padmar_a20"
            android:layout_marginBottom="@dimen/padmar_20"
            android:text="@string/text"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="@dimen/size_15"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/padmar_20"
            android:layout_weight="1"
            android:background="@drawable/signin_signup_edt_custom"
            android:padding="@dimen/padmar_10"
            android:text="@string/title_signin"
            android:textAllCaps="true"
            android:textSize="@dimen/size_18"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padmar_15"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/layout_70"
                android:layout_height="match_parent"
                android:background="@drawable/signin_strikethrough_foreground_custom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padmar_10"
                android:text="@string/another_signin"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/size_15"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/layout_70"
                android:layout_height="match_parent"
                android:background="@drawable/signin_strikethrough_foreground_custom" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAnotherWaySignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padmar_40"
            android:background="@color/white"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/anotherway_signin_custom" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_havenoacc"
                android:textColor="@color/black"
                android:textSize="@dimen/size_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/red"
                android:textSize="@dimen/size_15"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>