<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerProductInformation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.productinformation.ProductInformationActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/strikethrough_bottom"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padmar_10"
        android:weightSum="7">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/tvProductInfor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="@dimen/padmar_10"
            android:text="@string/productInformation"
            android:textColor="@color/black"
            android:textSize="@dimen/size_24"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/ic_cart" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/strikethrough_bottom"
                android:orientation="vertical"
                android:padding="@dimen/padmar_20">

                <ImageView
                    android:id="@+id/imgThumbnail"
                    android:layout_width="@dimen/layout_300"
                    android:layout_height="@dimen/layout_300"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_automotive" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProductImage"
                    android:layout_marginTop="@dimen/padmar_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/product_image_custom" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padmar_5"
                    android:text="@string/text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_15" />


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padmar_5"
                    android:text="@string/text"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_20"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padmar_5"
                    android:text="@string/text"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="@dimen/size_18"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padmar_5"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personalRating"
                            android:textColor="@color/black"
                            android:textSize="@dimen/size_18" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dauGach"
                            android:textColor="@color/black"
                            android:textSize="@dimen/size_18" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personalRating"
                            android:textColor="@color/black"
                            android:textSize="@dimen/size_18" />

                        <ImageView
                            android:layout_width="@dimen/layout_20"
                            android:layout_height="@dimen/layout_20"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/img_star" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padmar_15"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvRatings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/size_18"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" "
                            android:textColor="@color/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textColor="@color/text"
                            android:textSize="@dimen/size_18" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" "
                            android:textColor="@color/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" - "
                            android:textColor="@color/text"
                            android:textSize="@dimen/size_18" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" "
                            android:textColor="@color/text" />

                        <TextView
                            android:id="@+id/tvReviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/size_18"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" "
                            android:textColor="@color/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/review"
                            android:textColor="@color/text"
                            android:textSize="@dimen/size_18" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSalePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_18"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" USD "
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/tvPriceProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foreground="@drawable/strikethrough_foreground"
                        android:text="@string/text"
                        android:textColor="@color/red"
                        android:textSize="@dimen/size_18" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padmar_10"
                        android:text="@string/sale"
                        android:textColor="@color/bestSeller"
                        android:textSize="@dimen/size_18" />

                    <TextView
                        android:id="@+id/tvDiscountPercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padmar_5"
                        android:text="@string/text"
                        android:textColor="@color/bestSeller"
                        android:textSize="@dimen/size_18" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percent"
                        android:textColor="@color/bestSeller"
                        android:textSize="@dimen/size_18" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutProductDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/strikethrough_bottom"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padmar_20"
                android:paddingVertical="@dimen/padmar_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productDetail"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padmar_5"
                    android:text="@string/text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_18" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>